kubernetes/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: liatrio-deployment
  namespace: liatrio
spec:
  replicas: 2
  selector:
    matchLabels:
      app: liatrio
  template:
    metadata:
      labels:
        app: liatrio
    spec:
      containers:
        - name: liatrio
          image: your-image-url
          ports:
            - containerPort: 5000
